# cpp-filesystem

./: .clang-format  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  configure.sh  vcpkg.json
